--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
+    "@auth/prisma-adapter": "^2.0.0",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.6.1",
+    "mongoose": "^8.3.3",
+    "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
