--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL='mongodb+srv://erickbale360:Pim8RqtPG19BKD3Y@cluster0.lwxassb.mongodb.net/'
+MONGO_URL=''
 AUTH_SECRET='yqenPmKkK7hU0Jv6ycAwWlIDGbllQ2dyPNw/2XnOZsY='
 
